--- a/index.html
+++ b/index.html
@@ -10,6 +10,63 @@
 </head>
 <body>
   <h1>Programming Language Selector</h1>
-  
+  <h2>Have you ever asked yourself, what is the best programming language for me to learn between: 1) JavaScript 2) Python or 3) Go?</h2>
+  <p>We have got you covered! Fill out the quesitions below to find out:</p>
+
+  <form id="radio-form">
+    <h4>Do you like walks in the rain?</h4>
+    <label>
+      <input type="radio" name="rain" value="yes" checked>
+      Yes
+    </label><br>
+    <label>
+      <input type="radio" name="rain" value="no">
+      No
+    </label><br>
+
+    <h4>Do you prefer to vacation in warm or cold locations?</h4>
+    <label>
+      <input type="radio" name="vacation" value="warm" checked>
+      Warm
+    </label><br>
+    <label>
+      <input type="radio" name="vacation" value="cold">
+      Cold
+    </label><br>
+
+    <h4>Are you a dog or cat person?</h4>
+    <label>
+      <input type="radio" name="dogOrCat" value="dog" checked>
+      Dog
+    </label><br>
+    <label>
+      <input type="radio" name="dogOrCat" value="cat">
+      Cat
+    </label><br>
+
+    <h4>Do you like sports?</h4>
+    <label>
+      <input type="radio" name="sports" value="yes" checked>
+      Yes
+    </label><br>
+    <label>
+      <input type="radio" name="sports" value="no">
+      No
+    </label><br>
+
+    <h4>Do you like long walks on the beach or going hiking in the woods?</h4>
+    <label>
+      <input type="radio" name="beachOrHiking" value="beach" checked>
+      Walking on the beach
+    </label><br>
+    <label>
+      <input type="radio" name="beachOrHiking" value="woods">
+      Hiking in the woods
+    </label><br><br>
+    
+    <button type="submit">Submit</button>
+  </form>
+
+
 </body>
 </html>
