--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       No
     </label><br>
 
-    <h4>Do you like long walks on the beach or going hiking in the woods?</h4>
+    <h4>Do you like long walks on the beach or in the woods?</h4>
     <label>
       <input type="radio" name="beachOrHiking" value="beach" checked>
-      Walking on the beach
+      Beach
     </label><br>
     <label>
       <input type="radio" name="beachOrHiking" value="woods">
-      Hiking in the woods
+      Woods
     </label><br><br>
     
     <button type="submit">Submit</button>
