WIP: adding business logic for calculation of language recommendation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <button type="submit">Submit</button>
   </form>
 
+<p id="result" class="hidden">Results: You should learn to program X language!</p>
+
 
 </body>
 </html>
