Add corrections to business logic that provide expected outcomes for survey results

--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
 
     <h4>Do you like long walks on the beach or in the woods?</h4>
     <label>
-      <input type="radio" name="beachOrHiking" value="beach" checked>
+      <input type="radio" name="beach" value="beach" checked>
       Beach
     </label><br>
     <label>
-      <input type="radio" name="beachOrHiking" value="woods">
+      <input type="radio" name="beach" value="woods">
       Woods
     </label><br><br>
     
     <button type="submit">Submit</button>
   </form>
 
-<p id="result" class="hidden">Results: You should learn to program X language!</p>
+  <div id="result" class="hidden">
+    <p>Results: You should learn to program X language!</p>
+  </div>
 
 
 </body>
