--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
       Woods
     </label><br><br>
     
-    <button type="submit">Submit</button>
+    <button id="form-submit-button" type="submit">Submit</button>
   </form>
 
+  <button id="resetButton" class="hidden" type="button">Reset to Submit Again!</button><br>
+
   <div id="result" class="hidden">
-    <p>Results: You should learn to program X language!</p>
+    <p>Placeholder: Results text will show up here</p>
   </div>
 
 
