BUGFIX: reset button now clears results section and unhides form submit button

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <button id="form-submit-button" type="submit">Submit</button>
   </form>
 
-  <button id="resetButton" class="hidden" type="button">Reset to Submit Again!</button><br>
+  <button id="resetBtn" class="hidden" type="button">Reset to Submit Again!</button><br>
 
   <div id="result" class="hidden">
     <p>Placeholder: Results text will show up here</p>
