Add functionality to Reset form inputs to default values once reset button clicked

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <form id="radio-form">
     <h4>Do you like walks in the rain?</h4>
     <label>
-      <input type="radio" name="rain" value="yes" checked>
+      <input type="radio" name="rain" value="yes" id="rainDefault" checked>
       Yes
     </label><br>
     <label>
@@ -26,7 +26,7 @@
 
     <h4>Do you prefer to vacation in warm or cold locations?</h4>
     <label>
-      <input type="radio" name="vacation" value="warm" checked>
+      <input type="radio" name="vacation" value="warm" id="vacationDefault" checked>
       Warm
     </label><br>
     <label>
@@ -36,7 +36,7 @@
 
     <h4>Are you a dog or cat person?</h4>
     <label>
-      <input type="radio" name="dogOrCat" value="dog" checked>
+      <input type="radio" name="dogOrCat" value="dog" id="dogOrCatDefault" checked>
       Dog
     </label><br>
     <label>
@@ -46,7 +46,7 @@
 
     <h4>Do you like sports?</h4>
     <label>
-      <input type="radio" name="sports" value="yes" checked>
+      <input type="radio" name="sports" value="yes" id="sportsDefault" checked>
       Yes
     </label><br>
     <label>
@@ -56,7 +56,7 @@
 
     <h4>Do you like long walks on the beach or in the woods?</h4>
     <label>
-      <input type="radio" name="beach" value="beach" checked>
+      <input type="radio" name="beach" value="beach" id="beachDefault" checked>
       Beach
     </label><br>
     <label>
