Update styling of page and submit button

--- a/index.html
+++ b/index.html
@@ -76,16 +76,19 @@
         Woods
       </label><br><br>
       
-      <button id="form-submit-button" type="submit">Submit</button>
-    </form>
-
-    <button id="resetBtn" class="hidden" type="button">Reset to Submit Again!</button><br>
+      <button class="btn btn-primary btn-lg" id="form-submit-button" type="submit">Submit</button>
+    </form><br>
 
     <div id="result" class="hidden">
-      <p>Placeholder: Results text will show up here</p>
-    </div>
-  </div>
+      <div class=""jumbotron jumbotron-fluid">
+        <h2 id="resultText" class="display-4">Placeholder: Results text will show up here</h2>
+      </div>
 
+      <button id="resetBtn" type="button" class="btn btn-primary btn-lg">Reset to Submit Again!</button>
+    </div>
+    <br>
+    <br>
+  </div>
 
 </body>
 </html>
