Add Description and Setup Requirements to README

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Programming Language Selector</h1>
-      <p class="lead">Have you ever asked yourself, what is the best programming language for me to learn between: <span class="span" >Python, JavaScript and Go?</span></p>
+      <p class="lead">Have you ever asked yourself, what is the best programming language for me to learn first between: <span class="span" >Python, JavaScript and Go?</span></p>
       <p class="lead">We have got you covered! Fill out the quesitions below to find out:</p>
     </div>
   </div>
