Add business and UI logic to provide more details about each lang

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <div id="result" class="hidden">
       <div class=""jumbotron jumbotron-fluid">
         <h2 id="resultText" class="display-4">Placeholder: Results text will show up here</h2>
+        <p id="resultSummary"></p>
       </div>
 
       <button id="resetBtn" type="button" class="btn btn-primary btn-lg">Reset to Submit Again!</button>
