Updates to README and minor html formatting changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <input type="radio" name="sports" value="no">
         No
       </label><br>
-      <h4>Do you like long walks on the beach or in the woods?</h4>
+      <h4>Do you like long walks on the beach or hiking in the woods?</h4>
       <label>
         <input type="radio" name="beach" value="beach" id="beachDefault" checked>
         Beach
