BUGFIX: updated dog-cat id to correct multiple response issue

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <form id="radio-form">
       <h4>Do you like walks in the rain?</h4>
       <label>
-        <input type="radio" name="rain" value="yes" id="rainDefault" checked>
+        <input type="radio" name="rain" value="yes" id="rain-default" checked>
         Yes
       </label><br>
       <label>
@@ -38,7 +38,7 @@
       </label><br>
       <h4>Do you prefer to vacation in warm or cold locations?</h4>
       <label>
-        <input type="radio" name="vacation" value="warm" id="vacationDefault" checked>
+        <input type="radio" name="vacation" value="warm" id="vacation-default" checked>
         Warm
       </label><br>
       <label>
@@ -47,16 +47,16 @@
       </label><br>
       <h4>Are you a dog or cat person?</h4>
       <label>
-        <input type="radio" name="dogOrCat" value="dog" id="dogOrCatDefault" checked>
+        <input type="radio" name="dog-cat" value="dog" id="dog-default" checked>
         Dog
       </label><br>
       <label>
-        <input type="radio" name="dogOrCat" value="cat">
+        <input type="radio" name="dog-cat" value="cat">
         Cat
       </label><br>
       <h4>Do you like sports?</h4>
       <label>
-        <input type="radio" name="sports" value="yes" id="sportsDefault" checked>
+        <input type="radio" name="sports" value="yes" id="sports-default" checked>
         Yes
       </label><br>
       <label>
@@ -65,7 +65,7 @@
       </label><br>
       <h4>Do you like long walks on the beach or hiking in the woods?</h4>
       <label>
-        <input type="radio" name="beach" value="beach" id="beachDefault" checked>
+        <input type="radio" name="beach" value="beach" id="beach-default" checked>
         Beach
       </label><br>
       <label>
@@ -75,7 +75,7 @@
       <button class="btn btn-primary btn-lg" id="form-submit-button" type="submit">Submit</button>
     </form><br>
 
-    <button id="resetBtn" type="button" class="hidden" >Reset to Submit Again!</button>
+    <button id="reset-btn" type="button" class="hidden" >Reset to Submit Again!</button>
 
     <div id="result" class="hidden">
       <div class="jumbotron jumbotron-fluid">
